--- a/style.css
+++ b/style.css
@@ -520,6 +520,43 @@
   opacity: 1;
   z-index: 2;
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 10px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.modal-content {
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+  max-width: 90%;
+  max-height: 90vh;
+  border-radius: 12px;
+  box-shadow: 0 0 25px #000;
+}
+
+.close {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  color: white;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 10000;
+}
+
+.close:hover {
+  color: #00ffe5;
+}
+
 
 /* Carousel Navigation Buttons */
 .carousel-btn {
@@ -1168,41 +1205,6 @@
     font-size: 16px;
   }
 
-  /* 👤 About Section */
-  .about-section {
-    padding: 50px 20px;
-    text-align: center;
-  }
-
-  .about-wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .about-image {
-    width: 190px;
-    height: 190px;
-    margin-bottom: 20px;
-  }
-
-  .about-image::before {
-    width: 200px;
-    height: 200px;
-  }
-
-  .about-content {
-    max-width: 100%;
-    font-size: 15px;
-  }
-
-  .about-content h2 {
-    font-size: 24px;
-  }
-
-  .about-content p {
-    font-size: 14px;
-    line-height: 1.6;
-  }
 
   /* 💻 Projects Section */
   .projects-section {
