--- a/style.css
+++ b/style.css
@@ -411,7 +411,6 @@ main {
   color: #201f1f;
   padding: 80px 20px;
   position: relative;
-  z-index: 5;
 }
 
 .skills-section h2 {
@@ -437,7 +436,7 @@ main {
   box-shadow: 0 0 15px rgba(45, 45, 45, 0.6);
   padding: 20px;
   width: 220px;
-  transition: all 0.3s ease;
+  transition: all 0.6s ease;
 }
 
 .skill-group:hover {
@@ -489,16 +488,18 @@ main {
   border: 2px solid #252424;
   border-radius: 12px;
   padding: 20px;
+  margin-top: 10px;
   width: 400px;
   max-width: 700px;
-  transition: transform 0.4s ease, box-shadow 0.4s ease, border 0.3s ease;
+  max-height: 600px;
+  transition: transform 0.4s ease-out, box-shadow 0.4s ease-out;
   overflow: visible; 
   box-sizing: border-box;
   z-index: 0;
 }
 
-.project-card:hover{
-  box-shadow: inset 0px 0px 20px 2px #0dd0d0;
+.project-card:hover {
+  transform: translateY(-10px); /* moves card up smoothly */
 }
 
 .project-card h3 {
@@ -530,6 +531,7 @@ main {
   overflow: hidden;
   margin-bottom: 20px;
   border-radius: 12px;
+  text-align: center;
 }
 
 /* Image Carousel Container */
@@ -558,6 +560,23 @@ main {
   border: 2px solid #0f0e0eb3;
 }
 
+.project-links button{
+  padding: 10px;
+  border-radius: 8px;
+  color: #050505;
+  margin: 10px auto;
+  background-color: #ffffff;
+  transition: transform 0.5s ease;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.project-links button:hover{
+  transform: scaleX(0.9);
+  cursor: pointer;
+  box-shadow: 0 0 5px rgba(28, 29, 29, 0.964);
+}
+
 .project-images img:hover {
   transform: scale(1.06);
   cursor: pointer;
@@ -582,8 +601,7 @@ main {
   background-color: #333;
 }
 
-/* Certifications Section */
- 
+/* Certifications Section */ 
 .certifications-section h2 {
   color: #040404;
   font-size: 36px;
@@ -653,11 +671,13 @@ main {
 .cert-card h3 {
   font-size: 1.1rem;
   margin: 10px 0 5px;
+  text-align: center;
 }
 
 .cert-card p {
   font-size: 0.95rem;
   margin: 5px 0;
+  text-align: center;
 }
 
 .cert-card.active {
@@ -1016,6 +1036,21 @@ main {
 .social-icon a:hover{
   color: rgb(10, 218, 237);
 }
+
+
+/* Initial hidden state */
+.fade-up {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+/* Active visible state */
+.fade-up.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 @media (max-width: 1150px) {
   /* 🌐 Navbar */
   .nav-links {
